--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -10,93 +9,29 @@ body {
 }
 
 /* GRID */
+
 .gridwrapper {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, auto);
-    grid-template-areas: 
-        "headergrid" 
-        "navgrid" 
-        "contentgrid"
-        "asidegrid" 
-        "gallerygrid"
-        "footergrid";
+    grid-template-areas: "headergrid" "navgrid" "contentgrid" "asidegrid" "gallerygrid" "footergrid";
 }
 
 /* GRID Header */
+
 .grid-header {
     grid-area: headergrid;
 }
 
-.forsidebillede img{
+.forsidebillede img {
     width: 100%;
 }
 
-.grid-nav{
+/* GRID Nav */
+.grid-nav {
     grid-area: navgrid;
     text-align: center;
-}
-
-/* GRID Content */
-.grid-content {
-    grid-area: contentgrid;
-    margin: 0px;
-}
-
-/* Content - index.html */
-.content img {
-    float: left;
-}
-
-.content h2 {
-    text-align: center;
-    padding: 0 0 10px 0;
-}
-
-.content p {
-    margin: 2px auto;
-}
-
-/* Content - kontakt.html */
-.kontakt {
-    background-color: #C0D7EF;
-    padding: 75px 10px;
-    margin: 
-}
-
-/* GRID Aside */
-.grid-aside {
-    grid-area: asidegrid;
-}
-
-.asidecontent h3 {
-    padding: 0px 0 50px 0;
-}
-
-.asidecontent {
-    text-align: center;
-    padding: 75px 0px;
-    background-color: #C0D7EF;
-}
-
-/* GRID Galleri */
-.grid-gallery {
-    grid-area: gallerygrid;
-    float: left;
-}
-
-.grid-gallery img {
-    width: 33%;
-    margin: 5px 0px;
-}
-
-/* GRID Footer */
-.grid-footer {
-    grid-area: footergrid;
-    padding: 8% 0px 0px 20px;
-    position: relative;
-    background-image: url(../images/waterwave.png);
-    background-size: cover;
+    font-size: 20px;
 }
 
 /* NAV */
@@ -112,25 +47,200 @@ nav a {
     text-align: center;
     padding: 10px 10px;
     text-decoration: none;
-    font-size 14px;
     border-bottom: 3px solid transparent;
+    font-family: 'ubuntulight', sans-serif;
 }
 
 nav a:hover {
-    border-bottom: 3px solid red;
+    border-bottom: 1px solid #003758;
 }
 
-nav a:active {
-    border-bottom: 3px solid red;
+nav a.nohover {
+    border-bottom: 0px solid #003758;
 }
 
-footer {
+nav a.active {
+    font-family: 'ubuntumedium', sans-serif;
+}
+
+
+/* GRID Content */
+
+.grid-content {
+    grid-area: contentgrid;
+    margin: 0px;
+}
+
+/* Content - index.html */
+
+.content img {
+    width: 42%;
+    position: relative;
+    top: 70px;
+    left: 10%;
+}
+
+.content h2 {
+    text-align: center;
+    padding: 10px 0 10px 0;
+    font-family: 'ubuntumedium', sans-serif;
+}
+
+.content p {
+    margin: 3% 0 5% 0;
+    font-family: 'latolight', sans-serif;
+    width: 40%;
+    position:relative;
+    bottom: 175px;
+    left: 55%;
+}
+
+/* Content - kontakt.html */
+
+.kontakt {
+    background-color: #C0D7EF;
+    padding: 75px 100px;
+}
+
+.kontakt h2 {
+    margin: 0px 0px 50px 0px;
+    font-family: 'ubunturegular', sans-serif;
+}
+
+.findos {
+    position: absolute;
+    bottom: 455px;
+    width: 30%;
+    font-family: 'latolight', sans-serif;
+    color: #003758;
+}
+
+/* Kontaktform fundet via. w3schools, videreudviklet af os */
+/* https://www.w3schools.com/howto/howto_css_contact_form.asp */
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: #003758;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: 'latomedium', sans-serif;
+}
+
+input[type=submit]:hover {
+    background-color: #075db7;
+}
+
+.kontaktform {
+    border-radius: 5px;
+    background-color: #C0D7EF;
+    padding: 20px;
+    font-family: 'latoregular', sans-serif;
+    color: #003758;
+    position: relative;
+    width: 50%;
+    left: 48%;
+}
+
+/* GRID Aside */
+
+.grid-aside {
+    grid-area: asidegrid;
+}
+
+/* Aside - index.html */
+.asidecontent {
+    text-align: center;
+    padding: 40px 0px;
+    background-color: #C0D7EF;
+    font-family: 'latoregular', sans-serif;
+    color: white;
+}
+
+.asidecontent h3 {
+    padding: 0px 0 5px 0;
+    font-family: 'ubunturegular', sans-serif;
+    font-size: 50px;
+}
+
+.asidecontent p {
+    content: "";
+    display: block;
+    margin: 0 auto 20px auto;
+    width: 32%;
+    padding-top: 5px;
+    border-top: 1px solid white;
+    font-family: 'latolight', sans-serif;
+}
+
+.asidecontent ul {
+    display: inline-block;
+    list-style-type: none;
+    margin: 0px 30px;
+    font-family: 
+}
+
+.tidspunkter {
+    font-family: 'latolight';
+}
+
+/* Aside - Kontakt.html */
+/* Google Maps */
+#map {
+    width: 100%;
+    height: 750px;
+    position: absolute;
+    top: 860px;
+}
+
+.mapheight {
+    height: 565px;
+}
+
+/* GRID Galleri */
+
+.grid-gallery {
+    grid-area: gallerygrid;
+    float: left;
+}
+
+.grid-gallery img {
+    width: 33%;
+    margin: 5px 0px;
+}
+
+/* GRID Footer */
+
+.grid-footer {
+    grid-area: footergrid;
+    padding: 8% 0px 0px 20px;
+    background-image: url(../images/waterwave.png);
+    background-size: cover;
+    position: relative;
+}
+
+footer * {
     overflow: hidden;
+    text-decoration: none;
+    font-family: 'latolight', sans-serif;
+    color: white;
+    
 }
 
 footer ul {
     list-style-type: none;
-    text-align: left;
+    text-align: left;  
 }
 
 .payment img {
