--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,83 @@ nav a.active {
     left: 55%;
 }
 
+/* Content - menu.html */
+.chalkboard {
+    background-image: url(../images/menu/chalkboard.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    height: 1150px;
+    margin: 0 50px 0 50px;
+}
+
+.menu-body {
+    max-width: 40%;
+    margin: 0px 75px;
+    display: block;
+    color: white;
+}
+
+.menu-section {
+    margin-bottom: 80px;
+}
+
+.menu-section-title {
+    font-family: 'chalk_dashregular', sans-serif;
+    font-size: 50px;
+    display: block;
+    font-weight: normal;
+    margin: 70px 0 10px 0;
+    text-align: Center;
+    color: white;
+}
+
+.menu-item {
+    margin: 5px 0;
+    font-size: 18px;
+}
+
+.menu-item-name {
+    font-family: 'kg_ten_thousand_reasonsRg', sans-serif;
+}
+
+.menu-item-description {
+    font-style: italic;
+    font-family: 'kg_ten_thousand_reasonsRg', sans-serif;
+    font-size: .9em;
+    line-height: 1.5em;
+}
+
+.menu-item-price {
+    float: right;
+    font-family: 'kg_ten_thousand_reasonsRg', sans-serif;
+    margin-top: -30px;
+}
+
+.drikkevarer {
+    position: relative;
+    bottom: 28%;
+}
+
+.menufloat {
+    position: relative;
+    bottom: 357px;
+    left: 50%;
+    max-width: 40%;
+    margin: 0px 75px;
+    display: block;
+    color: white;
+}
+
+.menufloat2 {
+    position: relative;
+    bottom: 485px;
+    left: 50%;
+    max-width: 40%;
+    margin: 0px 75px;
+    display: block;
+    color: white;
+}
+
 /* Content - om_os.html */
 
 .historie {
@@ -312,7 +389,7 @@ input[type=submit]:hover {
     width: 100%;
     height: 800px;
     position: absolute;
-    top: 860px;
+    top: 900px;
 }
 
 .mapheight {
@@ -362,6 +439,58 @@ input[type=submit]:hover {
     display: table;
 }
 
+/* Aside - Salg af fisk - menu.html */
+.salg_af_fisk {
+    background-color: #C0D7EF;
+    color: white;
+    font-family: 'latomedium', sans-serif;
+    padding: 50px 50px 15% 50px;
+    position: relative;
+    top: 250px;
+    height: 350px;
+}
+
+.salg_fisk {
+    font-family: 'latomedium', sans-serif;
+    font-size: 24px;
+    width: 75%;
+    position: relative;
+    left: 15%;
+}
+
+.salg_pris {
+    font-family: 'latomedium', sans-serif;
+    font-size: 24px;
+    width: 5%;
+    position: relative;
+    left: 75%;
+    bottom: 200px;
+}
+
+.salg_info {
+    width: 30%;
+    position: relative;
+    bottom: 3%;
+    font-family: 'latolight', sans-serif;
+    font-size: 18px;
+}
+
+
+.salg_af_fisk h3 {
+    font-size: 26px;
+    font-family: 'ubuntulight', sans-serif;
+    margin: 0 0 10px 0;
+}
+
+.salg_af_fisk span {
+    position: relative;
+    top: 10px;
+    left: 86%;
+    font-family: 'latolight', sans-serif;
+    font-style: italic;
+    font-size: 24px;
+}
+
 /* GRID Galleri */
 
 .grid-gallery {
@@ -382,12 +511,12 @@ input[type=submit]:hover {
     font-family: 'latomedium', sans-serif;
     padding: 50px 50px 250px 50px;
     position: relative;
-    top: 200px;
-    height: 60%;
+    top: 20vh;
+    height: 300px;
 }
 
 .valuesmission p {
-    width: 70%;
+    width: 65%;
     position: relative;
     left: 32%;
     font-family: 'latolight', sans-serif;
@@ -414,8 +543,9 @@ input[type=submit]:hover {
     grid-area: footergrid;
     padding: 8% 0px 0px 20px;
     background-image: url(../images/waterwave.png);
-    background-size: cover;
+    background-size: 100% 100%;
     position: relative;
+    top: 100px;
 }
 
 .kontakt_ikon img {
@@ -441,7 +571,7 @@ footer ul {
 
 .payment_align {
     display: inline-block;
-    width: 5%;
+    width: 6%;
     padding: 5px;
 }
 
@@ -455,8 +585,8 @@ footer ul {
     background-color: #C0D7EF;
     padding: 100px 0px;
     position: absolute;
-    height: 120px;
+    height: 170px;
     width: 100%;
-    top: 80vh;
+    top: 75vh;
     z-index: -10;
 }
