--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,7 @@ input[type=submit]:hover {
 .opskrift {
     background-color: #C0D7EF;
     position: relative;
-    padding: 50px;
+    padding: 50px 50px 250px 50px;
     height: 800px;
     font-family: 'latomedium', sans-serif;
     color: #003758;
@@ -302,7 +302,7 @@ input[type=submit]:hover {
 .opskrift_pos3 {
     position: absolute;
     left: 35%;
-    bottom: 5%;
+    bottom: 20%;
     background-color: white;
     padding: 10px 10px 20px 10px;
 }
@@ -545,11 +545,11 @@ input[type=submit]:hover {
     background-image: url(../images/waterwave.png);
     background-size: 100% 100%;
     position: relative;
-    top: 100px;
+    top: 10px;
 }
 
 .kontakt_ikon img {
-    width: 2%;
+    width: 4%;
 }
 
 footer * {
@@ -583,10 +583,10 @@ footer ul {
 
 .waterwave {
     background-color: #C0D7EF;
-    padding: 100px 0px;
+    padding: 0px 0px 150px 0px;
     position: absolute;
-    height: 170px;
+    height: 20%;
     width: 100%;
-    top: 75vh;
+    top: 95vh;
     z-index: -10;
 }
