--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 html,
 body {
     height: 100%;
+    width: 100%;
 }
 
 /* GRID */
@@ -540,12 +541,49 @@ input[type=submit]:hover {
 
 .grid-gallery {
     grid-area: gallerygrid;
-    float: left;
+    display: flex;
 }
 
-.grid-gallery img {
-    width: 33%;
-    margin: 5px 0px;
+.container {
+  position: relative;
+    display: flex;
+  width: 50%;
+}
+
+.container img {
+  width: 90%;
+    margin: 10px auto;
+    align-self: center;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+}
+
+.container:hover .overlay {
+  opacity: 0.85;
+}
+
+.text {
+  color: white;
+  font-size: 26px;
+  position: absolute;
+    padding: 20px;
+    background-color: black;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+    font-family: 'latolight', sans-serif;
 }
 
 /* Værdier & Mission - om_os.html */
@@ -615,4 +653,53 @@ footer ul {
 
 footer li {
     margin: 7px 0px;
+}
+
+.facebook {
+    position: absolute;
+    bottom: 9%;
+    left: 93%;
+}
+
+/* Animation - Arrow - forside - index.html */
+.arrow_height {
+    height: 100%;
+}
+
+.arrow {
+    position: relative;
+    bottom: 20%;
+    left: 85%;
+    width: 2%;
+}
+
+.arrow i {
+  border: solid white;
+  border-width: 0 5px 5px 0;
+    border-radius: 0px 10px 2px 10px;
+  display: inline-block;
+  padding: 15px;
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
 }
