--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ nav a.active {
 
 .menu-body {
     max-width: 40%;
-    margin: 0px 75px;
+    margin: 0px 100px;
     display: block;
     color: white;
 }
@@ -199,10 +199,10 @@ nav a.active {
 
 .menufloat {
     position: relative;
-    bottom: 457px;
+    bottom: 410px;
     left: 48%;
     max-width: 40%;
-    margin: 0px 70px;
+    margin: 0px 50px;
     display: block;
     color: white;
 }
@@ -212,7 +212,7 @@ nav a.active {
     bottom: 585px;
     left: 48%;
     max-width: 40%;
-    margin: 0px 70px;
+    margin: 0px 50px;
     display: block;
     color: white;
 }
@@ -493,48 +493,36 @@ input[type=submit]:hover {
     padding: 50px 50px 350px 50px;
     position: relative;
     top: 100px;
-    height: 150px;
+    height: 250px;
+    text-align: center;
 }
 
-.salg_fisk {
-    font-family: 'latomedium', sans-serif;
-    font-size: 30px;
-    width: 75%;
-    position: relative;
-    left: 15%;
+.salg_fisk ul {
+    display: inline-block;
+    list-style-type: none;
+    margin: 0 65px;
+    font-size: 26px;
+    text-align: left;
 }
 
-.salg_pris {
-    font-family: 'latolight', sans-serif;
-    font-size: 30px;
-    width: 5%;
-    position: relative;
-    left: 75%;
-    bottom: 225px;
+.salg_fisk li {
+    margin: 0 0 7px 0;
 }
 
 .salg_info {
-    width: 30%;
+    width: 50%;
     position: relative;
     bottom: 3%;
     font-family: 'latolight', sans-serif;
-    font-size: 18px;
+    font-size: 28px;
+    text-align: left;
 }
-
 
 .salg_af_fisk h3 {
-    font-size: 26px;
+    font-size: 50px;
     font-family: 'ubuntulight', sans-serif;
     margin: 0 0 10px 0;
-}
-
-.salg_af_fisk span {
-    position: relative;
-    top: 10px;
-    left: 86%;
-    font-family: 'latolight', sans-serif;
-    font-style: italic;
-    font-size: 24px;
+    text-align: left;
 }
 
 /* GRID Galleri */
@@ -545,44 +533,44 @@ input[type=submit]:hover {
 }
 
 .container {
-  position: relative;
+    position: relative;
     display: flex;
-  width: 50%;
+    width: 50%;
 }
 
 .container img {
-  width: 90%;
+    width: 90%;
     margin: 10px auto;
     align-self: center;
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
 }
 
 .container:hover .overlay {
-  opacity: 0.85;
+    opacity: 0.85;
 }
 
 .text {
-  color: white;
-  font-size: 26px;
-  position: absolute;
+    color: white;
+    font-size: 26px;
+    position: absolute;
     padding: 20px;
     background-color: black;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
     font-family: 'latolight', sans-serif;
 }
 
@@ -619,7 +607,6 @@ input[type=submit]:hover {
 }
 
 /* GRID Footer */
-
 .grid-footer {
     grid-area: footergrid;
     padding: 8% 0px 0px 20px;
@@ -627,6 +614,22 @@ input[type=submit]:hover {
     background-size: 100% 100%;
     position: relative;
 }
+
+.pyntefisk_pos1 {
+    position: absolute;
+    bottom: 20%;
+    left: 85%;
+    width: 10%;
+}
+
+.pyntefisk_pos2 {
+    position: absolute;
+    bottom: 44%;
+    left: 87%;
+    width: 10%;
+}
+
+
 
 .waterwave {
     background-image: url(../images/waterwave2.png)
@@ -662,6 +665,7 @@ footer li {
 }
 
 /* Animation - Arrow - forside - index.html */
+
 .arrow_height {
     height: 100%;
 }
@@ -674,32 +678,36 @@ footer li {
 }
 
 .arrow i {
-  border: solid white;
-  border-width: 0 5px 5px 0;
+    border: solid white;
+    border-width: 0 5px 5px 0;
     border-radius: 0px 10px 2px 10px;
-  display: inline-block;
-  padding: 15px;
+    display: inline-block;
+    padding: 15px;
 }
 
 .down {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
 }
 
 .bounce {
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
+    -moz-animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-20px);
-  }
-  60% {
-    transform: translateY(-10px);
-  }
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-20px);
+    }
+    60% {
+        transform: translateY(-10px);
+    }
 }
