--- a/css/style.css
+++ b/css/style.css
@@ -226,26 +226,43 @@ nav a.active {
     color: white;
     font-family: 'latolight', sans-serif;
     height: 600px;
+    position: relative;
+    bottom: 25px;
+    text-align: center;
 }
 
 .historie h1 {
     position: relative;
     font-family: 'ubunturegular', sans-serif;
     font-size: 50px;
+    text-align: left;
+    margin: 0 0 20px 0;
 }
 
-.historie p {
-    width: 50%;
+.historie_column {
+    width: 100%;
+    text-align: center;
+    font-family: 'latolight', sans-serif;
+    color: white;
+}
+
+.historie_column img {
+    width: 650px;
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 20px 0 rgba(0, 0, 0, 0.2);
+}
+
+.historie_column p {
+    text-align: left;
+}
+
+.historie_row p {
+    width: 100%;
     position: relative;
-    top: 50px;
     font-size: 26px;
 }
 
-.historie img {
-    width: 35%;
-    position: relative;
-    bottom: 170px;
-    left: 57%;
+.historie_row {
+    display: flex;
 }
 
 /* Content - kontakt.html */
@@ -488,7 +505,7 @@ input[type=submit]:hover {
     font-family: 'ubunturegular', sans-serif;
     color: #003758;
     position: relative;
-    top: 150px;
+    top: 50px;
 }
 
 .hvemervi h1 {
@@ -631,11 +648,11 @@ input[type=submit]:hover {
     position: relative;
     left: 32%;
     font-family: 'latolight', sans-serif;
-    font-size: 24px;
+    font-size: 26px;
 }
 
 .valuesmission h3 {
-    font-size: 26px;
+    font-size: 50px;
     margin: 0 0 10px 0;
 }
 
@@ -669,6 +686,20 @@ input[type=submit]:hover {
     bottom: 44%;
     left: 87%;
     width: 10%;
+}
+
+.pyntefisk_pos3 {
+    position: absolute;
+    bottom: -70%;
+    left: 5%;
+    width: 150px;
+}
+
+.pyntefisk_pos4 {
+    position: absolute;
+    bottom: -65%;
+    left: 20%;
+    width: 100px;
 }
 
 .waterwave {
