--- a/css/style.css
+++ b/css/style.css
@@ -689,17 +689,31 @@ input[type=submit]:hover {
 }
 
 .pyntefisk_pos3 {
-    position: absolute;
-    bottom: -70%;
-    left: 5%;
+    position: relative;
+    bottom: 20px;
+    right: 150px;
     width: 150px;
 }
 
 .pyntefisk_pos4 {
-    position: absolute;
-    bottom: -65%;
-    left: 20%;
+    position: relative;
+    bottom: 150px;
+    right: 175px;
     width: 100px;
+}
+
+.pyntefisk_pos5 {
+    position: relative;
+    top: 200px;
+    left: 1%;
+    width: 150px;
+}
+
+.pyntefisk_pos6 {
+    position: relative;
+    top: 150px;
+    left: 5%;
+    width: 150px;
 }
 
 .waterwave {
