--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ nav a.active {
     background-color: #003758;
     color: white;
     font-family: 'latolight', sans-serif;
-    height: 600px;
+    height: 100%;
     position: relative;
     bottom: 25px;
     text-align: center;
@@ -352,6 +352,7 @@ input[type=submit]:hover {
     font-family: 'latomedium', sans-serif;
     color: #003758;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .opskrift_overskrift {
@@ -365,7 +366,7 @@ input[type=submit]:hover {
     background-color: white;
     padding: 10px 10px 10px 10px;
     margin: 20px;
-    flex: 50%;
+    flex: 29%;
     align-self: flex-start;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -415,9 +416,8 @@ input[type=submit]:hover {
     font-size: 20px;
     color: #003758;
     padding: 5px;
-    width: 500px;
     font-family: 'latolight', sans-serif;
-    line-height: 35px;
+    line-height: 25px;
 }
 
 .lb-data .lb-caption b {
@@ -431,11 +431,9 @@ input[type=submit]:hover {
 }
 
 .lb-data .lb-details {
-    width: 98%;
-}
-
-.lb-image img {
-    width: 25%;
+    width: 165.5%;
+    position: relative;
+    right: 35%;
 }
 
 /* GRID Aside */
@@ -489,7 +487,7 @@ input[type=submit]:hover {
 
 #map {
     width: 100%;
-    height: 700px;
+    height: 710px;
     position: absolute;
     top: 1100px;
 }
@@ -641,6 +639,8 @@ input[type=submit]:hover {
     font-family: 'latomedium', sans-serif;
     padding: 50px 50px 30px 50px;
     margin: 250px 0 0 0;
+    position: relative;
+    top: 10px;
 }
 
 .valuesmission p {
@@ -669,10 +669,10 @@ input[type=submit]:hover {
 
 .grid-footer {
     grid-area: footergrid;
-    padding: 8% 0px 0px 20px;
+    padding: 100px 0px 0px 20px;
     background-image: url(../images/waterwave.png);
     background-size: 100% 100%;
-    position: relative;
+    z-index: 1;
 }
 
 .pyntefisk_pos1 {
@@ -694,6 +694,8 @@ input[type=submit]:hover {
     bottom: 20px;
     right: 150px;
     width: 150px;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
 
 .pyntefisk_pos4 {
@@ -701,6 +703,8 @@ input[type=submit]:hover {
     bottom: 150px;
     right: 175px;
     width: 100px;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
 
 .pyntefisk_pos5 {
@@ -708,6 +712,8 @@ input[type=submit]:hover {
     top: 200px;
     left: 1%;
     width: 150px;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
 
 .pyntefisk_pos6 {
@@ -715,6 +721,8 @@ input[type=submit]:hover {
     top: 150px;
     left: 5%;
     width: 150px;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
 
 .waterwave {
