--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ nav a.active {
 
 .historie_column img {
     width: 650px;
+    margin: 0 0 0 15px;
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 10px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
