lang=dk // lang=da + kommentar struktur

--- a/css/style.css
+++ b/css/style.css
@@ -369,9 +369,11 @@ input[type=submit]:hover {
     background-color: white;
     padding: 10px 10px 10px 10px;
     margin: 20px;
-    flex: 31%;
-    align-self: flex-start;
+    flex: 0 31%;
+    align-self: center;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    position: relative;
+    left: 15%;
 }
 
 .container_opskrift {
