--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ nav a.active {
 
 #menu-undertekst {
     font-family: 'kg_ten_thousand_reasonsRg', sans-serif;
-    color: #ff1e00;
+    color: #ff8900;
     font-size: 20px;
     width: 230px;
     height: 80px;
